compiler/acton/test/typeerrors/ex25.act
actor Bob():
    def foo(cb):
        pass

actor Rob():
    def bar():
        b = Bob()
        b.foo()
